top banner added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fazle Rbbi portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="squar">
+            <h1>Welcome to my</h1>
+            <h1><span class="color-web">Web development</span> world!</h1>
+            <h3>Html Css Github Mern Stack Node Js React Js Developer</h3>
+            <p>you will get the perfect web developer expert
+                web development service is the best way to make your eye-catching website
+                A beautiful website attracts more customers to get your product promoted and increase your business to
+                grow
+                your higher profit. It will highlight your brand and your website
+                I'm a professional web development expert for Mren stack website create
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/md-fazlerabbi-777342204/">HIRE
+                ME</a>
+        </div>
+        <div class="squar"><img src="r-pic/rpic2.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
