dream-project added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
         <div class="squar"><img src="r-pic/rpic2.png" alt="">
         </div>
     </section>
+
+    <section class="dream-project">
+        <div class="squar"><img src="r-pic/rpic2.png" alt="">
+
+
+            <h1>Dream Big</h1>
+            <h2>Become a expert <span class="color-web">Web Developer</span> </h2>
+            <p>I am trying very hard to learn web development and I want to become a very good web developer so I seek
+                sincere support from all those who have a result from Senior.My only aim in life now is to become a
+                skilled web developer and to create talent for work in various marketplaces and for this, I am
+                practicing constantly and a lot. Thanks and I seek cooperation from everyone.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/md-fazlerabbi-777342204/">DOWNLOAD
+                RESUME</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
