style border and added footer

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container ">
         <div class="squar">
             <h1>Welcome to my</h1>
             <h1><span class="color-web">Web development</span> world!</h1>
@@ -32,7 +32,7 @@
         </div>
     </section>
 
-    <section class="dream-project">
+    <section class="top-banner flexible-container ">
         <div class="squar"><img src="r-pic/rpic2.png" alt="">
 
 
@@ -47,6 +47,41 @@
         </div>
 
     </section>
+    <section class=" ">
+        <h1>Experiances</h1>
+        <div class="flexible-container">
+            <div id="ful-stack-developer" class="box-shado">
+                <h2>Full stack web developer</h2>
+                <h3 class="color-web">pro level web developer</h3>
+                <p>My only aim in life now is to become a skilled web developer and to create talent for work in various
+                    marketplaces and for this, I am practicing constantly and a lot. Thanks and I seek cooperation from
+                    everyone.My only aim in life now is to become a skilled web developer and to create talent for work
+                    in
+                    various marketplaces and for this, I am practicing constantly and a lot. Thanks and I seek
+                    cooperation
+                    from everyone.</p>
+            </div>
+            <div id="baby-web-developer" class="box-shado">
+                <h2>Baby web developer</h2>
+                <h3 class="color-web">juniour level web developer</h3>
+                <p>My only aim in life now is to become a skilled web developer and to create talent for work in various
+                    marketplaces and for this, I am practicing constantly and a lot. Thanks and I seek cooperation from
+                    everyone.My only aim in life now is to become a skilled web developer and to create talent for work
+                    in
+                    various marketplaces and for this, I am practicing constantly and a lot. Thanks and I seek
+                    cooperation
+                    from everyone.</p>
+            </div>
+        </div>
+
+
+
+    </section>
 </body>
+<footer>
+    <p>
+        web development 2023 start march 6.full mren stack @bio
+    </p>
+</footer>
 
 </html>
